[tool.poetry]
name = "m3s1-project-travel-insurance"
version = "0.1.0"
description = ""
authors = ["Erikas Leonenka <e.leonenka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.2"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
ipykernel = "^6.29.5"
statsmodels = "^0.14.4"
scikit-learn = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
